crates/reinhardt-core/macros/tests/ui/settings/fail/composition_keyword_inference.rs
use reinhardt_macros::settings;

#[settings(StaticSettings)]
pub struct BadSettings;

fn main() {}
